--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,12 @@
 #
 cmake_minimum_required (VERSION 3.8)
 set(OpenCV_DIR "E:/opencv/build")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+if(MSVC)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
+endif(MSVC)
+
 FIND_PACKAGE( OpenCV REQUIRED )   
 # 头文件
 include_directories("include")
